--- a/Detecting Diabetic Retinopathy Using CNNs.ipynb
+++ b/Detecting Diabetic Retinopathy Using CNNs.ipynb
@@ -90,38 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "class DRModel(nn.Module):\n",
-    "    def __init__(self, num_classes: int = 5):\n",
-    "        super().__init__()\n",
-    "        self.backbone = models.resnet18(weights=\"IMAGENET1K_V1\")   # pretrained ✔ \n",
-    "        in_feats = self.backbone.fc.in_features\n",
-    "        self.backbone.fc = nn.Identity()        \n",
-    "        self.dropout = nn.Dropout(0.5)\n",
-    "        self.head = nn.Linear(in_feats, num_classes)\n",
-    "      \n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.backbone(x)          # shape [B, in_feats]\n",
-    "        x = self.dropout(x)\n",
-    "        logits = self.head(x)         # shape [B, num_classes]  ← CrossEntropy expects logits\n",
-    "        return logits                 # *** MUST return ***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model 2"
+    "### Model"
    ]
   },
   {
@@ -144,534 +113,6 @@
     "    def forward(self, x):\n",
     "        x = self.backbone(x)\n",
     "        return self.head(x)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10: 100%|██████████| 879/879 [08:38<00:00,  1.70it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: Train Loss = 0.9320\n",
-      "→ Val Loss: 0.9023 | Val Accuracy: 75.90%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/10: 100%|██████████| 879/879 [07:07<00:00,  2.06it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2: Train Loss = 0.8297\n",
-      "→ Val Loss: 0.8148 | Val Accuracy: 81.44%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/10: 100%|██████████| 879/879 [07:16<00:00,  2.01it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3: Train Loss = 0.7782\n",
-      "→ Val Loss: 0.8059 | Val Accuracy: 81.68%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/10: 100%|██████████| 879/879 [07:13<00:00,  2.03it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4: Train Loss = 0.7241\n",
-      "→ Val Loss: 0.8075 | Val Accuracy: 81.80%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5/10: 100%|██████████| 879/879 [08:26<00:00,  1.74it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5: Train Loss = 0.6512\n",
-      "→ Val Loss: 0.8452 | Val Accuracy: 81.54%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6/10: 100%|██████████| 879/879 [08:42<00:00,  1.68it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6: Train Loss = 0.5768\n",
-      "→ Val Loss: 0.8815 | Val Accuracy: 79.62%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7/10: 100%|██████████| 879/879 [08:43<00:00,  1.68it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7: Train Loss = 0.4988\n",
-      "→ Val Loss: 0.9153 | Val Accuracy: 80.60%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8/10: 100%|██████████| 879/879 [07:03<00:00,  2.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8: Train Loss = 0.4661\n",
-      "→ Val Loss: 0.9684 | Val Accuracy: 76.05%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9/10: 100%|██████████| 879/879 [07:32<00:00,  1.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9: Train Loss = 0.4479\n",
-      "→ Val Loss: 0.9049 | Val Accuracy: 80.90%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10/10: 100%|██████████| 879/879 [06:57<00:00,  2.11it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10: Train Loss = 0.4397\n",
-      "→ Val Loss: 0.9077 | Val Accuracy: 77.75%\n",
-      "\n",
-      "=== Final Evaluation Report ===\n",
-      "Confusion Matrix:\n",
-      "[[4764  300  136    0    7]\n",
-      " [ 341   85   54    0    0]\n",
-      " [ 357  111  495   61   12]\n",
-      " [  10    5   81   50   14]\n",
-      " [  16    2   40   16   69]]\n",
-      "\n",
-      "Classification Report:\n",
-      "                  precision    recall  f1-score   support\n",
-      "\n",
-      "           No DR       0.87      0.91      0.89      5207\n",
-      "            Mild       0.17      0.18      0.17       480\n",
-      "        Moderate       0.61      0.48      0.54      1036\n",
-      "          Severe       0.39      0.31      0.35       160\n",
-      "Proliferative DR       0.68      0.48      0.56       143\n",
-      "\n",
-      "        accuracy                           0.78      7026\n",
-      "       macro avg       0.54      0.47      0.50      7026\n",
-      "    weighted avg       0.77      0.78      0.77      7026\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# ---- Model, Loss, Optimizer Setup ----\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model = DRModel(num_classes=5).to(device)\n",
-    "\n",
-    "\n",
-    "# Compute weights using full train dataframe\n",
-    "classes = np.array([0, 1, 2, 3, 4])\n",
-    "weights = compute_class_weight(class_weight=\"balanced\", classes=classes, y=train_df[\"level\"])\n",
-    "weights = np.clip(weights, 0.5, 3.0)  # avoid extremely high weights\n",
-    "class_weights = torch.tensor(weights, dtype=torch.float).to(device)\n",
-    "\n",
-    "criterion = nn.CrossEntropyLoss(label_smoothing=0.1)\n",
-    "\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=1e-4, weight_decay=1e-5)  # for DRModel\n",
-    "\n",
-    "# ---- Training Loop ----\n",
-    "num_epochs = 10\n",
-    "best_val_loss = float('inf')\n",
-    "patience = 3\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "\n",
-    "    for images, labels in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\"):\n",
-    "        images, labels = images.to(device,non_blocking=True), labels.to(device,non_blocking=True)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        logits = model(images)\n",
-    "        loss = criterion(logits, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        running_loss += loss.item()\n",
-    "\n",
-    "    avg_train_loss = running_loss / len(train_loader)\n",
-    "    print(f\"Epoch {epoch+1}: Train Loss = {avg_train_loss:.4f}\")\n",
-    "    \n",
-    "    # ---- Validation ----\n",
-    "    model.eval()\n",
-    "    val_loss, correct, total = 0.0, 0, 0\n",
-    "    all_preds, all_targets = [], []\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for images, labels in val_loader:\n",
-    "            images, labels = images.to(device), labels.to(device)\n",
-    "            logits = model(images)\n",
-    "            loss = criterion(logits, labels)\n",
-    "            val_loss += loss.item()\n",
-    "\n",
-    "            preds = torch.argmax(logits, dim=1)\n",
-    "            all_preds.append(preds.cpu())\n",
-    "            all_targets.append(labels.cpu())\n",
-    "\n",
-    "            correct += (preds == labels).sum().item()\n",
-    "            total += labels.size(0)\n",
-    "\n",
-    "    avg_val_loss = val_loss / len(val_loader)\n",
-    "    val_acc = correct / total\n",
-    "    print(f\"→ Val Loss: {avg_val_loss:.4f} | Val Accuracy: {val_acc:.2%}\")\n",
-    "    \n",
-    "     # Early stopping logic\n",
-    "    if avg_val_loss < best_val_loss:\n",
-    "        best_val_loss = avg_val_loss\n",
-    "        stop_counter = 0\n",
-    "        torch.save(model.state_dict(), \"Resnet18_without_weights.pt\")\n",
-    "        best_preds = torch.cat(all_preds)\n",
-    "        best_targets = torch.cat(all_targets)\n",
-    "   \n",
-    "\n",
-    "# ---- Evaluation ----\n",
-    "print(\"\\n=== Final Evaluation Report ===\")\n",
-    "y_true = torch.cat(all_targets).numpy()\n",
-    "y_pred = torch.cat(all_preds).numpy()\n",
-    "\n",
-    "print(\"Confusion Matrix:\")\n",
-    "print(confusion_matrix(y_true, y_pred))\n",
-    "\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_true, y_pred, target_names=[\n",
-    "    \"No DR\", \"Mild\", \"Moderate\", \"Severe\", \"Proliferative DR\"]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10: 100%|██████████| 879/879 [05:44<00:00,  2.55it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1: Train Loss = 1.6339\n",
-      "→ Val Loss: 1.5173 | Val Accuracy: 76.16%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2/10: 100%|██████████| 879/879 [05:45<00:00,  2.54it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2: Train Loss = 1.5066\n",
-      "→ Val Loss: 1.4955 | Val Accuracy: 68.35%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3/10: 100%|██████████| 879/879 [05:37<00:00,  2.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3: Train Loss = 1.4403\n",
-      "→ Val Loss: 1.5234 | Val Accuracy: 77.26%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4/10: 100%|██████████| 879/879 [05:36<00:00,  2.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4: Train Loss = 1.3655\n",
-      "→ Val Loss: 1.4850 | Val Accuracy: 76.39%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5/10: 100%|██████████| 879/879 [05:38<00:00,  2.60it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 5: Train Loss = 1.2500\n",
-      "→ Val Loss: 1.5980 | Val Accuracy: 75.16%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6/10: 100%|██████████| 879/879 [05:40<00:00,  2.58it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6: Train Loss = 1.0945\n",
-      "→ Val Loss: 1.6643 | Val Accuracy: 72.52%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7/10: 100%|██████████| 879/879 [05:39<00:00,  2.59it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 7: Train Loss = 0.9787\n",
-      "→ Val Loss: 1.6389 | Val Accuracy: 75.51%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8/10: 100%|██████████| 879/879 [05:36<00:00,  2.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 8: Train Loss = 0.9265\n",
-      "→ Val Loss: 1.6050 | Val Accuracy: 75.68%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9/10: 100%|██████████| 879/879 [05:45<00:00,  2.54it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 9: Train Loss = 0.8957\n",
-      "→ Val Loss: 1.6792 | Val Accuracy: 78.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10/10: 100%|██████████| 879/879 [05:36<00:00,  2.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10: Train Loss = 0.8837\n",
-      "→ Val Loss: 1.6338 | Val Accuracy: 73.84%\n",
-      "\n",
-      "=== Final Evaluation Report ===\n",
-      "Confusion Matrix:\n",
-      "[[4512  525  166    1   23]\n",
-      " [ 320  101   51    0    2]\n",
-      " [ 327  124  430  110   34]\n",
-      " [  13    4   56   71   14]\n",
-      " [  11    1   25   31   74]]\n",
-      "\n",
-      "Classification Report:\n",
-      "                  precision    recall  f1-score   support\n",
-      "\n",
-      "           No DR       0.87      0.86      0.87      5227\n",
-      "            Mild       0.13      0.21      0.16       474\n",
-      "        Moderate       0.59      0.42      0.49      1025\n",
-      "          Severe       0.33      0.45      0.38       158\n",
-      "Proliferative DR       0.50      0.52      0.51       142\n",
-      "\n",
-      "        accuracy                           0.74      7026\n",
-      "       macro avg       0.49      0.49      0.48      7026\n",
-      "    weighted avg       0.76      0.74      0.75      7026\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# ---- Model, Loss, Optimizer Setup ----\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "model_weights = DRModel(num_classes=5).to(device)\n",
-    "\n",
-    "\n",
-    "# Compute weights using full train dataframe\n",
-    "classes = np.array([0, 1, 2, 3, 4])\n",
-    "weights = compute_class_weight(class_weight=\"balanced\", classes=classes, y=train_df[\"level\"])\n",
-    "weights = np.clip(weights, 0.5, 3.0)  # avoid extremely high weights\n",
-    "class_weights = torch.tensor(weights, dtype=torch.float).to(device)\n",
-    "\n",
-    "criterion = nn.CrossEntropyLoss(class_weights,label_smoothing=0.1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "optimizer = torch.optim.AdamW(model_weights.parameters(), lr=1e-4, weight_decay=1e-5)  # for DRModel\n",
-    "\n",
-    "# ---- Training Loop ----\n",
-    "num_epochs = 10\n",
-    "best_val_lossW = float('inf')\n",
-    "patience = 3\n",
-    "\n",
-    "for epoch in range(num_epochs):\n",
-    "    model_weights.train()\n",
-    "    running_loss = 0.0\n",
-    "\n",
-    "    for images, labels in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\"):\n",
-    "        images, labels = images.to(device,non_blocking=True), labels.to(device,non_blocking=True)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "        logits = model_weights(images)\n",
-    "        loss = criterion(logits, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        running_loss += loss.item()\n",
-    "\n",
-    "    avg_train_lossW = running_loss / len(train_loader)\n",
-    "    print(f\"Epoch {epoch+1}: Train Loss = {avg_train_lossW:.4f}\")\n",
-    "    \n",
-    "    # ---- Validation ----\n",
-    "    model_weights.eval()\n",
-    "    val_lossW, correctW, totalW = 0.0, 0, 0\n",
-    "    all_predsW, all_targetsW = [], []\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for images, labels in val_loader:\n",
-    "            images, labels = images.to(device), labels.to(device)\n",
-    "            logits = model_weights(images)\n",
-    "            loss = criterion(logits, labels)\n",
-    "            val_lossW += loss.item()\n",
-    "\n",
-    "            preds = torch.argmax(logits, dim=1)\n",
-    "            all_predsW.append(preds.cpu())\n",
-    "            all_targetsW.append(labels.cpu())\n",
-    "\n",
-    "            correctW += (preds == labels).sum().item()\n",
-    "            totalW += labels.size(0)\n",
-    "\n",
-    "    avg_val_lossW = val_lossW / len(val_loader)\n",
-    "    val_accW = correctW / totalW\n",
-    "    print(f\"→ Val Loss: {avg_val_lossW:.4f} | Val Accuracy: {val_accW:.2%}\")\n",
-    "    \n",
-    "     # Early stopping logic\n",
-    "    if avg_val_lossW < best_val_lossW:\n",
-    "        best_val_lossW = avg_val_lossW\n",
-    "        stop_counter = 0\n",
-    "        torch.save(model_weights.state_dict(), \"Resnet18_with_weights.pt\")\n",
-    "        best_predsW = torch.cat(all_predsW)\n",
-    "        best_targetsW = torch.cat(all_targetsW)\n",
-    "\n",
-    "\n",
-    "# ---- Evaluation ----\n",
-    "print(\"\\n=== Final Evaluation Report ===\")\n",
-    "y_true = torch.cat(all_targetsW).numpy()\n",
-    "y_pred = torch.cat(all_predsW).numpy()\n",
-    "\n",
-    "print(\"Confusion Matrix:\")\n",
-    "print(confusion_matrix(y_true, y_pred))\n",
-    "\n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_true, y_pred, target_names=[\n",
-    "    \"No DR\", \"Mild\", \"Moderate\", \"Severe\", \"Proliferative DR\"]))\n"
    ]
   },
   {
